# fillit

./: .gitignore  CMakeLists.txt  Makefile  author  cleaner.c  cleaner.h  fillit  main.c  map.c  map.h  normalize.h  piece.c  solver.c  tetramino.c  tetramino.h  validator.c
includes/: cleaner.h  file.h  helpers.h  map.h  normalize.h  piece.h  reader.h  solver.h  tetramino.h  validator.h
libft/: ft_lstrev.c  libft.h
samples/: sample.txt  sample2.txt  sample3.txt  simple_sample.txt
samples/invalid/: sample.txt
src/: cleaner.c  helpers.c  main.c  map.c  normalize.c  piece.c  solver.c  tetramino.c  validator.c
